--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div>{{amout}}</div>
                     <div>
-                        <!-- ไปดูของเดิมมั่ง -->
+                        <!-- ไปดูของเดิม -->
                         <button>edit</button>
                         <button>delete</button>
                     </div>
